--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@svgr/webpack": "^6.2.1",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
+    "bootstrap": "^5.1.3",
     "next": "11.1.0",
     "react": "17.0.2",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "sass": "^1.42.1",
