--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
-    "sass": "^1.42.1",
-    "typescript": "^4.6.3",
     "@svgr/webpack": "^6.2.1",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "eslint-config-next": "11.1.0",
+    "sass": "^1.42.1",
+    "typescript": "^4.6.3",
+    "webpack-bundle-analyzer": "^4.5.0"
   }
 }
