--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.0.0",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^18.0.0",
+    "sharp": "^0.30.3",
     "typewriter-effect": "^2.18.2"
   },
   "devDependencies": {
