--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.1",
+    "aos": "^2.3.4",
     "next": "12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
