--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.1",
     "aos": "^2.3.4",
+    "i18next": "^21.6.16",
+    "js-cookie": "^3.0.1",
     "next": "12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.6",
     "sharp": "^0.30.3",
     "typewriter-effect": "^2.18.2"
   },
