--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
+    "@types/js-cookie": "^3.0.1",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "eslint": "7.32.0",
