chore: change icon and image folder path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
+      "@/Assets/*": [
+        "src/assets/*"
+      ],
       "@/Components/*": [
         "src/components/*"
       ],
