--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.6",
+    "react-router-dom": "^6.3.0",
     "sharp": "^0.30.3",
     "typewriter-effect": "^2.18.2"
   },
