--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.1",
     "aos": "^2.3.4",
+    "google-spreadsheet": "^3.2.0",
     "i18next": "^21.6.16",
     "js-cookie": "^3.0.1",
     "next": "12.1.5",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@imgix/js-core": "^3.6.0",
     "@svgr/webpack": "^6.2.1",
+    "@types/google-spreadsheet": "^3.2.1",
     "@types/js-cookie": "^3.0.1",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
@@ -37,5 +39,11 @@
     "sass": "^1.42.1",
     "typescript": "^4.6.3",
     "webpack-bundle-analyzer": "^4.5.0"
+  },
+  "browser": {
+    "fs": false,
+    "net": false,
+    "tls": false,
+    "child_process": false
   }
 }
