--- a/src/google/package.json
+++ b/src/google/package.json
@@ -4,13 +4,20 @@
   "description": "google-sheet-i18n-sync",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon src/app.ts",
+    "build": "tsc",
+    "node": "tsc && node dist/app.js"
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.1"
+  },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.30",
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   }
 }
