--- a/src/google/package.json
+++ b/src/google/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "@types/google-spreadsheet": "^3.2.1",
+    "express": "^4.18.1",
+    "google-spreadsheet": "^3.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
