--- a/src/google/package.json
+++ b/src/google/package.json
@@ -2,7 +2,7 @@
   "name": "google-sheet-i18n-sync",
   "version": "1.0.0",
   "description": "google-sheet-i18n-sync",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "start": "nodemon src/app.ts",
     "build": "tsc",
@@ -11,11 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/google-spreadsheet": "^3.2.1",
+    "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "google-spreadsheet": "^3.2.0"
   },
   "devDependencies": {
+    "@types/google-spreadsheet": "^3.2.1",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.30",
     "nodemon": "^2.0.16",
