--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.6.1",
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.1",
+    "animejs": "^3.2.1",
     "aos": "^2.3.4",
     "i18next": "^21.6.16",
     "js-cookie": "^3.0.1",
@@ -22,6 +23,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.6",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
     "sharp": "^0.30.3",
     "typewriter-effect": "^2.18.2"
@@ -29,9 +31,11 @@
   "devDependencies": {
     "@imgix/js-core": "^3.6.0",
     "@svgr/webpack": "^6.2.1",
+    "@types/animejs": "^3.1.4",
     "@types/js-cookie": "^3.0.1",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
+    "@types/react-lottie": "^1.2.6",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "sass": "^1.42.1",
