--- a/package.json
+++ b/package.json
@@ -9,38 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@material-ui/core": "^4.12.4",
-    "@mui/icons-material": "^5.6.1",
-    "@mui/lab": "^5.0.0-alpha.77",
-    "@mui/material": "^5.6.1",
-    "animejs": "^3.2.1",
-    "aos": "^2.3.4",
-    "i18next": "^21.6.16",
-    "js-cookie": "^3.0.1",
-    "next": "12.1.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-i18next": "^11.16.6",
-    "react-lottie": "^1.2.3",
-    "react-router-dom": "^6.3.0",
-    "sharp": "^0.30.3",
-    "typewriter-effect": "^2.18.2"
+    "@emotion/react": "~11.10.5",
+    "@emotion/styled": "~11.10.5",
+    "@material-ui/core": "~4.12.4",
+    "@mui/icons-material": "~5.11.0",
+    "@mui/lab": "~5.0.0-alpha.77",
+    "@mui/material": "~5.11.8",
+    "animejs": "~3.2.1",
+    "aos": "~2.3.4",
+    "i18next": "~22.4.9",
+    "js-cookie": "~3.0.1",
+    "next": "~13.1.6",
+    "react": "~18.2.0",
+    "react-dom": "~18.2.0",
+    "react-i18next": "~12.1.5",
+    "react-lottie": "~1.2.3",
+    "react-router-dom": "~6.8.1",
+    "sharp": "~0.31.3",
+    "typewriter-effect": "~2.19.0"
   },
   "devDependencies": {
-    "@imgix/js-core": "^3.6.0",
-    "@svgr/webpack": "^6.2.1",
-    "@types/animejs": "^3.1.4",
-    "@types/js-cookie": "^3.0.1",
-    "@types/node": "^17.0.23",
-    "@types/react": "^17.0.43",
-    "@types/react-lottie": "^1.2.6",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
-    "sass": "^1.42.1",
-    "typescript": "^4.6.3",
-    "webpack-bundle-analyzer": "^4.5.0"
+    "@imgix/js-core": "~3.8.0",
+    "@svgr/webpack": "~6.5.1",
+    "@types/animejs": "~3.1.4",
+    "@types/js-cookie": "~3.0.1",
+    "@types/node": "~18.13.0",
+    "@types/react": "~18.0.27",
+    "@types/react-lottie": "~1.2.6",
+    "eslint": "8.34.0",
+    "eslint-config-next": "13.1.6",
+    "sass": "~1.58.0",
+    "typescript": "~4.9.5",
+    "webpack-bundle-analyzer": "~4.7.0"
   },
   "browser": {
     "fs": false,
